force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/Apttus_Billing__RelatedARTransaction__c.object-meta.xml
<CustomObject>
    <description>Represents a single AR transaction related to the invoice</description>
    <label>Related A/R Transaction</label>
    <nameField>
        <displayFormat>TX-{00000000}</displayFormat>
        <label>Txn Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related A/R Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>