force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__ARImpactAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ARImpactAmount__c</fullName>
    <description>The A/R impacting amount</description>
    <inlineHelpText>The A/R impacting amount</inlineHelpText>
    <label>A/R Impact Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>