force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>Allows integrations to write in a description.</description>
    <inlineHelpText>Allows integrations to write in a description.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>