force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__EndingInvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EndingInvoiceBalance__c</fullName>
    <description>The invoice balance after applying the transaction</description>
    <inlineHelpText>The invoice balance after applying the transaction</inlineHelpText>
    <label>Ending Invoice Balance</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>