force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__ExternalSystemStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ExternalSystemStatus__c</fullName>
    <description>The external system status</description>
    <inlineHelpText>The external system status</inlineHelpText>
    <label>External System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>