force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__IntegrationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IntegrationDate__c</fullName>
    <description>The integration date</description>
    <inlineHelpText>The integration date</inlineHelpText>
    <label>Integration Date</label>
    <type>DateTime</type>
</CustomField>