force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceId__c</fullName>
    <description>ID of the related invoice</description>
    <inlineHelpText>ID of the related invoice</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
    <relationshipName>RelatedTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>