force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__RelatedTxnId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RelatedTxnId__c</fullName>
    <description>External System Transaction Id.</description>
    <inlineHelpText>External System Transaction Id.</inlineHelpText>
    <label>Related Txn Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>