force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__TotalPaymentsApplied__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalPaymentsApplied__c</fullName>
    <description>The total payments applied to-date</description>
    <inlineHelpText>The total payments applied to-date</inlineHelpText>
    <label>Total Payments Applied (Deprecated)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>