force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__TotalRefundsApplied__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalRefundsApplied__c</fullName>
    <description>The total refunds applied to-date</description>
    <inlineHelpText>The total refunds applied to-date</inlineHelpText>
    <label>Total Refunds Applied (Deprecated)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>