force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__TxnEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TxnEffectiveDate__c</fullName>
    <description>The transaction effective date</description>
    <inlineHelpText>The transaction effective date</inlineHelpText>
    <label>Txn Effective Date</label>
    <type>DateTime</type>
</CustomField>