force-app/main/default/objects/Apttus_Billing__RelatedARTransaction__c/fields/Apttus_Billing__TxnType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TxnType__c</fullName>
    <description>The transaction type</description>
    <inlineHelpText>The transaction type</inlineHelpText>
    <label>Txn Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Creation</fullName>
            </value>
            <value>
                <fullName>Standard Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Invoice</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Debit Memo</fullName>
            </value>
            <value>
                <fullName>Payment Reversal</fullName>
            </value>
            <value>
                <fullName>Refund Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>